--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "pdfjs-dist": "^3.3.122",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
